syntax = "proto3";
package cooking.users.resources;
option go_package = "cooking-users";

service UserResources {
    rpc GetUserResource(ResourceRequest) returns (ResourceResponse);
    rpc DrawUserResource(ChangeResourceRequest) returns (ChangeResourceResponse);
    rpc UpdateUserResources(ResourceRequest) returns (ResourceResponse);
    rpc AddUserResource(ChangeResourceRequest) returns (ChangeResourceResponse);
    rpc AddUserResources(ChangeResourcesRequest) returns (ResourcesResponse);
}

message ResourcesResponse {
    repeated Resource resources = 2;
}

message ChangeResourcesRequest {
    string user_id = 1;
    repeated Resource resources = 2;
}

message ResourcesRequest {
    string user_id = 1;
    repeated Resource resources = 2;
}

message Resource {
    string type  =1;
    string value =2;
}

message ResourceRequest {
    string user_id = 1;
    string type = 2;
}
message ResourceResponse {
    string value  = 1;
}
message ChangeResourceRequest {
    string user_id = 1;
    string type = 2;
    double count = 3;
}
message ChangeResourceResponse {
    bool result = 1;
    string msg  = 2;
}

